initial ieem page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Renato Vargas">
     <link rel="icon" href="/img/favicon.ico">
 
-    <title>SEEA Guatemala: </title>
+    <title>IEEM</title>
 
     
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">SEEA Guatemala</a>
+      <a class="navbar-brand" href="/">IEEM</a>
     </div>
 
     
