Removed relative paths

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>IEEM</title>
 
     
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 	
 	 
-	<link href="/css/lavish-bootstrap.css" rel="stylesheet">
+	<link href="css/lavish-bootstrap.css" rel="stylesheet">
 	
   </head>
 
