fixed relative css paths

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Renato Vargas">
     <link rel="icon" href="/img/favicon.ico">
 
-    <title>Agriculture, Forestry, and Fisheries: Understanding the Guatemalan food basket</title>
+    <title>IEEM</title>
 
     
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 	
 	 
-	<link href="/css/lavish-bootstrap.css" rel="stylesheet">
+	<link href="css/lavish-bootstrap.css" rel="stylesheet">
 	
   </head>
 
