--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Nutriendo el Crecimiento</a>
+      <a class="navbar-brand" href="https://chwresearch.github.io/ieem/">IEEM</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,9 +56,7 @@
       </ul>
 	  
       <ul class="nav navbar-nav navbar-right">
-<<<<<<< Local Changes
         <li><a href="/credits">Spanish</a></li>
-=======
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Idioma/Language<span class="caret"></span></a>
 	          <ul class="dropdown-menu">
