--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Nutriendo el Desarrollo / Guatemala">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Nutriendo el Crecimiento</title>
+    <title>IEEM - Integrated Environmental-Economic Modeling Framework</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+   
 	
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -64,7 +64,6 @@
 				<li><a href="/">Español</a></li>
 	          </ul>
 	        </li>
->>>>>>> External Changes
       </ul>
   </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
