Added mailing list

--- a/index.html
+++ b/index.html
@@ -45,18 +45,20 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <!--
+	  <ul class="nav navbar-nav">
+		   
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Descargas<span class="caret"></span></a>
           <ul class="dropdown-menu">
-			<li><a href="/policy-brief-es.pdf">Informe Ejecutivo</a></li>
-			<li><a href="/food-security-guatemala-cge.pdf">Reporte final (en inglés)</a></li>
+			<li><a href="policy-brief-es.pdf">Informe Ejecutivo</a></li>
+			<li><a href="food-security-guatemala-cge.pdf">Reporte final (en inglés)</a></li>
           </ul>
         </li>
+	-->
       </ul>
 	  
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/credits">Spanish</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Idioma/Language<span class="caret"></span></a>
 	          <ul class="dropdown-menu">
@@ -72,9 +74,16 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-		 <h1 id="vulnerabilidad-alimenticia-en-guatemala-un-análisis-de-equilibrio-general">Vulnerabilidad Alimenticia en Guatemala: un análisis de equilibrio general</h1>
-	
-      </div>
+		  <div class="col-md-8">
+			  <h1> Integrated Environmental and Economic Modeling </h1>
+			  <h3> Introducing sustainability in economy-wide assessments </h3>
+      	  </div>
+		  <div class="col-md-4">
+			  <img src=img/chiclet-aff.png class="img-circle img-responsive center-block">
+		  </div>
+	  
+	  </div>
+	  
     </div>
 
     <div class="container">
@@ -144,6 +153,44 @@
           <p><a class="btn btn-default" href="#" role="button">Conozca a nuestro socio global &raquo;</a></p>
         </div> -->
         <div class="col-md-4">
+			
+		<!-- Begin MailChimp Signup Form -->
+		<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+		<style type="text/css">
+			#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+			/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+			   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+		</style>
+		<div id="mc_embed_signup">
+		<form action="//chwresearch.us14.list-manage.com/subscribe/post?u=60a5fab8567e0167a3cccddc7&amp;id=be6cb8cbc3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		    <div id="mc_embed_signup_scroll">
+			<h2>Subscribe to our mailing list</h2>
+		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+		<div class="mc-field-group">
+			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+		</label>
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		</div>
+		<div class="mc-field-group">
+			<label for="mce-FNAME">First Name </label>
+			<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+		</div>
+		<div class="mc-field-group">
+			<label for="mce-LNAME">Last Name </label>
+			<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+		</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60a5fab8567e0167a3cccddc7_be6cb8cbc3" tabindex="-1" value=""></div>
+		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		    </div>
+		</form>
+		</div>
+		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+		<!--End mc_embed_signup-->	
+			<hr>
           <br id="downloads">
 		  <a class="btn btn-primary btn-block btn-sm" href="policy-brief-es.pdf" role="button">Descargar Resumen Ejecutivo </a>
 		  <br>
@@ -157,7 +204,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Nutriendo el Crecimiento 2015-2016</p>
+        <p>&copy; IEEM is the intellectual property of the Inter-American Development Bank 2015-2016 with hosting provided by CHW S.A.</p>
       </footer>
     </div> <!-- /container -->
 
