Modified mailing list text

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		<div id="mc_embed_signup">
 		<form action="//chwresearch.us14.list-manage.com/subscribe/post?u=60a5fab8567e0167a3cccddc7&amp;id=be6cb8cbc3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		    <div id="mc_embed_signup_scroll">
-			<h2>Subscribe to our mailing list</h2>
+			<h2>Get updates from IEEM in your inbox</h2>
 		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 		<div class="mc-field-group">
 			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
