Added Onil's picture

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			  <h3> Introducing sustainability in economy-wide assessments </h3>
       	  </div>
 		  <div class="col-md-4">
-			  <img src=img/chiclet-aff.png class="img-circle img-responsive center-block">
+			  <img src=img/fuelwood.jpg class="img-circle img-responsive center-block">
 		  </div>
 	  
 	  </div>
