Added Onil's picture

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-md-8">
 		  <br>
 		  <p id="lead" class="lead">
-		  <em>The Integrated Environmental and Economic Modeling (IEEM) framework is the first Computable General Equilibrium Modeling solution designed to take advantage of the economic and natural resource information of the System of Environmental and Economic Accounts Central Framework in order to provide researchers and decision-makers with economy-wide impact assessments that take the use of natural resources into account.</em>
+		  <em>The Integrated Environmental and Economic Modeling (IEEM) framework is the first Computable General Equilibrium Modeling solution designed to take advantage of the economic and natural resource information of the System of Environmental and Economic Accounts Central Framework, in order to provide researchers and decision-makers with economy-wide impact assessments that take into account the use of natural resources.</em>
 		  </p>
 		  <br>
 		  
