Added Onil's picture

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		  <br>
 		  
 		  <h2>Natural resource contributions to GDP</h2>
-		  <p>On how much does nature contribute to wealth.</p>
+		  <p>On how much nature contributes to wealth.</p>
 		  
 		  <h2>Mainstreaming Environmental and Economic Measurements </h2>
 		  <p>On the introduction of SEEA Central Framework and the move towards Environmental Accounting</p>
