added papers for download

--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 		  					</tr>
 				  
 		  				    <tr>
-		  						<td>Banerjee et al. (2016). The SEEA-Based Integrated Economic-Environmental Modelling Framework: An Illustration with Guatemala’s Forest and Fuelwood Sector</td>
+		  						<td>Banerjee et al. (2016). <em>The SEEA-Based Integrated Economic-Environmental Modelling Framework: An Illustration with Guatemala’s Forest and Fuelwood Sector</em>.</td>
 		  						<td><a class="btn btn-primary btn-block btn-xs" href="https://www.gtap.agecon.purdue.edu/resources/res_display.asp?RecordID=5075">Download</a></td>
 		  					</tr>
 		  				    <tr>
-		  						<td>Banerjee et al. (2016). A Conceptual Framework for Integrated Economic–Environmental Modeling</td>
+		  						<td>Banerjee et al. (2016). <em>A Conceptual Framework for Integrated Economic–Environmental Modeling</em></td>
 		  						<td><a class="btn btn-primary btn-block btn-xs" href="http://www.wavespartnership.org/en/knowledge-center/conceptual-framework-integrated-economic–-environmental-modeling">Download</a></td>
 		  					</tr>
 				  
