--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		 <hr>
 		 <p>IEEM represents critical relationships between the environment and the economy and when used for public policy and investment analysis, produces results that could not previously be obtained through a single modeling framework. IEEM generates indicators that capture the multi-dimensionality of wealth and well-being as well as standard indicators that reveal impacts on GDP, income and employment.</p>
 		 
-	  <p><strong>IEEM Team:</strong></p>
+	  <h2 id="team">IEEM Team</h2>
 	  <ul>
 	  <li>Onil Banerjee - Inter-American Development Bank</li>
 	  <li>Martín Cicowiez - Universidad Nacional de La Plata, Argentina</li>
