--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Idioma/Language<span class="caret"></span></a>
 	          <ul class="dropdown-menu">
-				<li><a href="/index-en.html">English</a></li>
-				<li><a href="/">Español</a></li>
+				<li><a href="#">English</a></li>
+				<li><a href="#">Español</a></li>
 	          </ul>
 	        </li>
       </ul>
